Fix button function

--- a/main.css
+++ b/main.css
@@ -1,14 +1,24 @@
-/* body {
+body {
   display: flex;
   align-content: space-around;
-} */
+  justify-content: center;
+}
+
 
 h1 {
-  flex: auto;
+  /* background-color: silver;
+  width: 50%;
+  margin: auto;
+  border-radius: .3rem; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   margin-top: 30px;
   margin-bottom: 0px;
   text-align: center;
   font-family: 'Poller One', cursive;
+
+
 }
 
 h5 {
