--- a/main.css
+++ b/main.css
@@ -40,20 +40,12 @@ h5 {
   padding-left: 15vw;
   padding-right: 15vw;
   margin: auto;
-  text-align: center;
+  text-align: left;
 }
 
-@media screen and (max-width: 600px) {
-  h5, h4 {
-    padding-left: 7vw;
-    padding-right: 7vw;
-  }
-}
 
 #state-form {
   text-align: center;
-  padding: 5px;
-  color: ;
   font-family: 'Titillium Web', sans-serif;
 }
 
@@ -72,17 +64,48 @@ h5 {
 
 h3 {
   margin-bottom: 5px;
-  margin-top: 30px;
   font-family: 'Poller One', cursive;
+  width: 12vw;
+  align-content: flex-start;
+  overflow-wrap: break-word;
 }
 
 h4{
+  color: #0d68b3;
+  width: 50vw;
   margin-bottom: 5px;
   margin-top: 5px;
   font-family: 'Titillium Web', sans-serif;
+  display: flex;
+  align-content: space-around;
+}
+
+h3, h4 {
+  height: 30px;
+  display: inline-block;
+  margin: 30px 10px 10px 0px;
+  justify-content: flex-start;
 }
 
 p {
   margin-top: 10px;
   font-family: 'Barlow', sans-serif;
+}
+
+@media screen and (max-width: 600px) {
+  h5, h4 {
+    display: inline-block;
+    padding-left: 7vw;
+    padding-right: 7vw;
+    height: auto;
+  }
+  h3{
+    margin-top: 30px;
+    width: 50vw;
+  }
+  h4 {
+    margin-top: auto;
+    text-align: left;
+    padding: 0px;
+  }
 }
