--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ h1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-top: 40px;
+  margin-top: 15vh;
   margin-bottom: 0px;
   text-align: center;
   font-family: 'Poller One', cursive;
